# Clean-Code

./: .gitignore  .pre-commit-config.yaml  Makefile  notebook.ipynb  pyproject.toml
.github/workflows/: python-tests.yaml
clean-code-2/: notebook.ipynb  pyproject.toml
clean-code-2/docs/: index.md
clean-code-2/src/clean_code_2/: hello.py
clean-code-2/src/clean_code_2/utils/: generate.py
clean-code-2/tests/unit_tests/utils/: test_generate.py
helpers/: local.py
src/clean_code_2/: hello.py
src/clean_code_2/utils/: generate.py
tests/unit_tests/utils/: test_generate.py
